--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,8 @@
 AM_CXXFLAGS = $(PICKY_CXXFLAGS)
 AM_CPPFLAGS = -I/usr/lib/llvm-3.4/include/
-bin_PROGRAMS = dummy
+bin_PROGRAMS = domino
 
-common_source = compiler_pass.h
-dummy_SOURCES = $(common_source) dummy.cc
-dummy_LDFLAGS = -L/usr/lib/llvm-3.4/lib/
-dummy_LDADD   = -lclang
+common_source = compiler_pass.h compiler_pass.cc
+domino_SOURCES = $(common_source) domino.cc
+domino_LDFLAGS = -L/usr/lib/llvm-3.4/lib/
+domino_LDADD   = -lclang $(top_srcdir)/third_party/libutils.a
